Sbt fat building JAR support